# Wallerson

./: README.md
1-Wallerson-Oficial/: gonzaga.txt
2-Logica-de-Movimento/Codigos iniciais/: TESTE6.py  Untitled.ipynb  conhecimentodecaminho.py  sensor4.py  teste.py  teste1.py  teste3.py  teste3sen.py  teste5.py  teste7.py
2-Logica-de-Movimento/Codigos iniciais/Modelo1/: main.py  teste.py  teste1.py  teste2.py
2-Logica-de-Movimento/Codigos iniciais/cenas/: part_02_scene.ttt
2-Logica-de-Movimento/Mapeamento/: tp3.ipynb
2-Logica-de-Movimento/Mapeamento/Cena/: tp3_map1.ttt
2-Logica-de-Movimento/Navegação/: PrototipoDeNavegação.py  prototipoNavegaçãoRos.py  protótipoNavegação.ttt  testeSensores.py
2-Logica-de-Movimento/Planejamento/: main.py  tp2.ipynb
2-Logica-de-Movimento/Radar/Wallerson_Codes-main/: Graphics Wallerson.py
2-Logica-de-Movimento/wl_robot/: package.xml  setup.cfg  setup.py
2-Logica-de-Movimento/wl_robot/config/: conttroller_config.yaml
2-Logica-de-Movimento/wl_robot/launch/: my_robot_launch.py
2-Logica-de-Movimento/wl_robot/src/wl_robot/: simple_controller.py
2-Logica-de-Movimento/wl_robot/urdf/: my_robot.urdf.xacro
2-Logica-de-Movimento/wl_robot/urdf/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
2-Logica-de-Movimento/wl_robot/urdf/log/: latest_build
3-Reconhecimento-de-imagem/2-Lucas/IAteste/: project.py
3-Reconhecimento-de-imagem/3-Jorge/wallerson/: detected_object.py  detection_code.py  main.py
3-Reconhecimento-de-imagem/4-Pedro/CódigoAutomação/: automatizacao.ipynb
(+364 files in other folders)
