<?xml version="1.0"?>
<package format="2">
  <name>my_robot</name>
  <version>0.0.0</version>
  <description>Descrição do seu pacote</description>

  <maintainer email="danilo@todo.todo">danilo</maintainer>
  <license>Licença</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>

  <build_depend>launch</build_depend>
  <exec_depend>launch</exec_depend>

  <build_depend>launch_ros</build_depend>
  <exec_depend>launch_ros</exec_depend>

  <build_depend>xacro</build_depend>
  <exec_depend>xacro</exec_depend>

  <build_depend>gazebo_ros</build_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <build_depend>ros2_control</build_depend>
  <exec_depend>ros2_control</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

